---
config:
  theme: neutral
  layout: elk
---
erDiagram
%%    direction LR
    person {
        varchar(40) username PK
        varchar(100) full_name
        varchar(254) email
        varchar(50) title
        varchar(50) department
    }

    department {
        bigint id PK
        varchar(50) name UK
    }

    skill_group {
        bigint id PK
        varchar(50) name UK
        varchar(250) description
    }

    skill {
        bigint id PK
        varchar(70) name UK
        varchar(250) description
    }

    skill_tag {
        bigint id PK
        varchar(70) name UK
    }

    person_skill {
        varchar(40) person_id PK, FK
        bigint skill_id PK, FK
        integer level
        timestamp last_modified_date
    }

    skill_tagging {
        bigint skill_id PK, FK
        bigint tag_id PK, FK
    }

    skill_group_skills {
        bigint group_id PK, FK
        bigint skill_id PK, FK
    }

    department_skill_groups {
        bigint department_id PK, FK
        bigint group_id PK, FK
    }

    department ||--o{ department_skill_groups: "has"
    skill_group ||--o{ department_skill_groups: "is available in"
    skill_group ||--o{ skill_group_skills: "contains"
    skill ||--o{ person_skill: "is acquired by"
    person ||--o{ person_skill: "has"
    skill ||--o{ skill_group_skills: "is part of"
    skill ||--o{ skill_tagging: "is tagged with"
    skill_tag ||--o{ skill_tagging: "tags"

%% Alternative for TB/LR direction
%% skill||--o{skill_group_skills:"is part of"
%% person||--o{person_skill:"has"
%% skill||--o{skill_tagging:"is tagged with"
%% skill_tag||--o{skill_tagging:"tags"
%% skill||--o{person_skill:"is acquired by"
%% skill_group||--o{skill_group_skills:"contains"
%% skill_group||--o{department_skill_groups:"is available in"
%% department||--o{department_skill_groups:"has"
